[gd_scene load_steps=2 format=3 uid="uid://m8hpww2momm6"]

[ext_resource type="Script" path="res://MultiplayerMenu.gd" id="1_wl67q"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wl67q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -33.0
offset_right = 22.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Start"

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
